@@ -3832,6 +3832,56 @@ operator|.
 name|getPointNumBytes
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|numDimensions
+operator|==
+literal|1
+condition|)
+block|{
+comment|// PointInSetQuery.MergePointVisitor expects values to be visited in increasing order,
+comment|// this is a 1d optimization which has to be done here too. Otherwise we emit values
+comment|// out of order which causes mismatches.
+name|Arrays
+operator|.
+name|sort
+argument_list|(
+name|pointValues
+argument_list|,
+literal|0
+argument_list|,
+name|pointValuesCount
+argument_list|)
+expr_stmt|;
+name|minPackedValue
+operator|=
+name|pointValues
+index|[
+literal|0
+index|]
+operator|.
+name|bytes
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+name|maxPackedValue
+operator|=
+name|pointValues
+index|[
+name|pointValuesCount
+operator|-
+literal|1
+index|]
+operator|.
+name|bytes
+operator|.
+name|clone
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
 name|minPackedValue
 operator|=
 name|pointValues
@@ -3993,6 +4043,7 @@ argument_list|,
 name|numBytesPerDimension
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 block|}
