@@ -4922,6 +4922,274 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testMultiValuedPointsSortedCorrectly
+specifier|public
+name|void
+name|testMultiValuedPointsSortedCorrectly
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|IntPoint
+argument_list|(
+literal|"ints"
+argument_list|,
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|IntPoint
+argument_list|(
+literal|"ints"
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|IntPoint
+argument_list|(
+literal|"ints"
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|LongPoint
+argument_list|(
+literal|"longs"
+argument_list|,
+literal|3L
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|LongPoint
+argument_list|(
+literal|"longs"
+argument_list|,
+literal|2L
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|LongPoint
+argument_list|(
+literal|"longs"
+argument_list|,
+literal|1L
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FloatPoint
+argument_list|(
+literal|"floats"
+argument_list|,
+literal|3F
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FloatPoint
+argument_list|(
+literal|"floats"
+argument_list|,
+literal|2F
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FloatPoint
+argument_list|(
+literal|"floats"
+argument_list|,
+literal|1F
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DoublePoint
+argument_list|(
+literal|"doubles"
+argument_list|,
+literal|3D
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DoublePoint
+argument_list|(
+literal|"doubles"
+argument_list|,
+literal|2D
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|DoublePoint
+argument_list|(
+literal|"doubles"
+argument_list|,
+literal|1D
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MemoryIndex
+name|mi
+init|=
+name|MemoryIndex
+operator|.
+name|fromDocument
+argument_list|(
+name|doc
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|IndexSearcher
+name|s
+init|=
+name|mi
+operator|.
+name|createSearcher
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|s
+operator|.
+name|count
+argument_list|(
+name|IntPoint
+operator|.
+name|newSetQuery
+argument_list|(
+literal|"ints"
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|s
+operator|.
+name|count
+argument_list|(
+name|LongPoint
+operator|.
+name|newSetQuery
+argument_list|(
+literal|"longs"
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|s
+operator|.
+name|count
+argument_list|(
+name|FloatPoint
+operator|.
+name|newSetQuery
+argument_list|(
+literal|"floats"
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|s
+operator|.
+name|count
+argument_list|(
+name|DoublePoint
+operator|.
+name|newSetQuery
+argument_list|(
+literal|"doubles"
+argument_list|,
+literal|2
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testIndexingPointsAndDocValues
 specifier|public
 name|void
